--- a/CardGames/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/CardGames/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,21 +1,37 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="12B19" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="YSP-wf-QDK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="12B19" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="XAC-B5-a4b">
     <dependencies>
         <deployment defaultVersion="1296" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1498"/>
     </dependencies>
     <scenes>
-        <!--View Controller - Card Games-->
-        <scene sceneID="Abl-UN-EOM">
+        <!--Navigation Controller-->
+        <scene sceneID="LMK-uP-YsT">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="0Ao-qk-NI2" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="s9N-8G-QrV" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="7w4-QY-MUn">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cVp-4U-MIF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController definesPresentationContext="YES" id="XAC-B5-a4b" sceneMemberID="viewController">
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="G5y-E1-QFc">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="2" kind="relationship" relationship="rootViewController" id="jXH-Px-evK"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="-544" y="317"/>
+        </scene>
+        <!--View Controller - Card Games-->
+        <scene sceneID="5">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
+                <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3">
                         <rect key="frame" x="0.0" y="64" width="480" height="256"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="GhX-6E-TLB">
-                                <rect key="frame" x="204" y="32" width="72" height="37"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="96a-6f-9WC">
+                                <rect key="frame" x="20" y="20" width="440" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Play">
@@ -26,11 +42,11 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="nPu-iv-JBE" kind="push" id="4fp-WT-uAL"/>
+                                    <segue destination="5YQ-yq-kIg" kind="push" id="h7o-ZY-DOi"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Hg9-Su-LmM">
-                                <rect key="frame" x="204" y="108" width="72" height="37"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="2ki-jj-kyT">
+                                <rect key="frame" x="20" y="109" width="440" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Rules">
@@ -41,11 +57,11 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="RXc-S4-HAE" kind="push" id="K75-cR-tPH"/>
+                                    <segue destination="FVG-eZ-usr" kind="push" id="30s-jO-myq"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="e68-ti-UUg">
-                                <rect key="frame" x="204" y="187" width="72" height="37"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="hUi-70-3oz">
+                                <rect key="frame" x="20" y="199" width="440" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="About">
@@ -55,91 +71,73 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="k1N-Vb-Mth" kind="push" id="SqL-nE-BDq"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Card Games" id="u66-Jw-WQB"/>
-                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackOpaque"/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <nil key="simulatedBottomBarMetrics"/>
-                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <navigationItem key="navigationItem" title="Card Games" id="9MM-wM-YTE"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="803" y="145"/>
+            <point key="canvasLocation" x="99" y="317"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="kjE-YC-B0G">
+        <!--View Controller - Play-->
+        <scene sceneID="Wss-xF-8cb">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="WIV-Ky-uSI" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="nPu-iv-JBE" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="leT-Ak-buW">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Pe-BX-vnZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="5YQ-yq-kIg" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="var-dd-0E9">
                         <rect key="frame" x="0.0" y="64" width="480" height="256"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Play" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="eMH-Vx-3NR">
-                                <rect key="frame" x="175" y="156" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
-                    <navigationItem key="navigationItem" id="a3p-bQ-kJi"/>
-                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <navigationItem key="navigationItem" title="Play" id="34m-PX-dtm"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1505" y="-60"/>
+            <point key="canvasLocation" x="796" y="-88"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="v8m-xD-jR0">
+        <!--View Controller - Rules-->
+        <scene sceneID="Zlx-XT-R6h">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="clh-bb-wKf" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="RXc-S4-HAE" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="sJu-7o-UXQ">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hfq-7J-QZo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="FVG-eZ-usr" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YCP-Kx-Ab5">
                         <rect key="frame" x="0.0" y="64" width="480" height="256"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Rules" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="DtG-ID-Hot">
-                                <rect key="frame" x="111" y="89" width="44" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
-                    <navigationItem key="navigationItem" id="U4h-1b-KKR"/>
+                    <navigationItem key="navigationItem" title="Rules" id="4fr-vz-lfA"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1505" y="449"/>
+            <point key="canvasLocation" x="796" y="317"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="dGM-zP-AeN">
+        <!--View Controller - About-->
+        <scene sceneID="anr-Yt-sla">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="TBa-Ds-Jhx" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController id="YSP-wf-QDK" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="SeG-kN-vDf">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="s9N-8G-QrV" kind="relationship" relationship="rootViewController" id="KRv-uu-XRv"/>
-                    </connections>
-                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="i6e-eb-7Ec" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="k1N-Vb-Mth" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Uof-fW-9wb">
+                        <rect key="frame" x="0.0" y="64" width="480" height="256"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="About" id="bn7-XW-iXa"/>
+                </viewController>
             </objects>
-            <point key="canvasLocation" x="121" y="145"/>
+            <point key="canvasLocation" x="796" y="747"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
